--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
         <div class="col-sm-12 col-md-12 col-lg-9" id="menuHeader">
           <ul class="nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">La conferencia</a>
+              <a class="nav-link" aria-current="page" href="#texto">La conferencia</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Los oradores</a>
+              <a class="nav-link" href="#conoceOrador">Los oradores</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">El lugar y la fecha</a>
+              <a class="nav-link" href="#textoMedio">El lugar y la fecha</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Conviertete en orador</a>
+              <a class="nav-link" href="#formulario">Conviertete en orador</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="tickets" href="#">Comprar tickets</a>
+              <a class="nav-link" id="tickets" href="tickets.html">Comprar tickets</a>
             </li>
           </ul>
         </div>
@@ -63,8 +63,8 @@
             <!-- Botones Imagen Fondo -->
             <div class="row">
               <div class="col-sm-12 col-md-12 col-lg-12" id="botonComentario">
-                <button type="button" class="btn btn-outline-light" id="botonOrador">Quiero ser orador</button>
-                <button type="button" class="btn btn-success" id="botonComprar">Comprar tickets</button>
+                <a class="btn btn-outline-light" href="#formulario" role="button" id="botonOrador">Quiero ser orador</a>
+                <a class="btn btn-success" href="/tickets.html" role="button" id="botonComprar">Comprar tickets</a>
               </div>
             </div>
           </div>
@@ -187,25 +187,25 @@
     <div class="row" id="menuFooter">
       <ul class="row nav justify-content-center" id="menu">
         <li class="nav-item col-sm-5 col-md-4 col-lg-1" id="item">
-          <a class="nav-link" href="#"><b>Preguntas<br>frecuentes</b></a>
+          <a class="nav-link" href="construccion.html"><b>Preguntas<br>frecuentes</b></a>
         </li>
         <li class="nav-item col-sm-5 col-md-4 col-lg-1" id="item">
-          <a class="nav-link" href="#"><b>Contáctanos</b></a>
+          <a class="nav-link" href="construccion.html"><b>Contáctanos</b></a>
         </li>
         <li class="nav-item col-sm-5 col-md-4 col-lg-1" id="item">
-          <a class="nav-link" href="#"><b>Prensa</b></a>
+          <a class="nav-link" href="construccion.html"><b>Prensa</b></a>
         </li>
         <li class="nav-item col-sm-5 col-md-4 col-lg-1" id="item">
-          <a class="nav-link" href="#"><b>Conferencias</b></a>
+          <a class="nav-link" href="construccion.html"><b>Conferencias</b></a>
         </li>
         <li class="nav-item col-sm-5 col-md-4 col-lg-1" id="item">
-          <a class="nav-link" href="#"><b>Terminos y<br>condiciones</b></a>
+          <a class="nav-link" href="construccion.html"><b>Terminos y<br>condiciones</b></a>
         </li>
         <li class="nav-item col-sm-5 col-md-4 col-lg-1" id="item">
-          <a class="nav-link" href="#"><b>Privacidad</b></a>
+          <a class="nav-link" href="construccion.html"><b>Privacidad</b></a>
         </li>
         <li class="nav-item col-sm-12 col-md-12 col-lg-1" id="item">
-          <a class="nav-link" href="#"><b>Estudiantes</b></a>
+          <a class="nav-link" href="construccion.html"><b>Estudiantes</b></a>
         </li>
       </ul>
     </div>
